--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.bit.turit.MainActivity">
 
@@ -8,46 +7,47 @@
 
         <item
             android:id="@+id/nav_perfil"
-            android:title="Perfil"
+            android:title="@string/perfil"
             android:icon="@drawable/ic_person">
 
             <menu>
-                <item
-                    android:id="@+id/nav_cambiar_datos"
-                    android:title="Cambiar datos de usuario"
-                    android:icon="@drawable/ic_edit"/>
+                <group android:checkableBehavior="single">
+                    <item
+                        android:id="@+id/nav_cambiar_datos"
+                        android:title="@string/cambiar_datos_usuario"
+                        android:icon="@drawable/ic_edit"/>
 
-                <item
-                    android:id="@+id/nav_cambiar_contrasena"
-                    android:title="Cambiar contraseña"
-                    android:icon="@drawable/ic_edit"/>
+                    <item
+                        android:id="@+id/nav_cambiar_contrasena"
+                        android:title="@string/cambiar_contrasena"
+                        android:icon="@drawable/ic_edit"/>
+                </group>
             </menu>
-
         </item>
 
         <item
             android:id="@+id/nav_notificaciones"
-            android:title="Notificaciones"
+            android:title="@string/notificaciones"
             android:icon="@drawable/ic_notifications"/>
 
         <item
             android:id="@+id/nav_historial"
-            android:title="Historial de canjes"
+            android:title="@string/historial_canjes"
             android:icon="@drawable/ic_list_alt"/>
 
         <item
             android:id="@+id/nav_TyC"
-            android:title="Términos y Condiciones"
+            android:title="@string/terminos_condiciones"
             android:icon="@drawable/ic_terminos_y_condiciones"/>
 
         <item
             android:id="@+id/nav_sobre_nosotros"
-            android:title="Sobre nosotros"
+            android:title="@string/sobre_nosotros"
             android:icon="@drawable/ic_sobre"/>
 
         <item
             android:id="@+id/nav_logout"
-            android:title="Cerrar sesión"
+            android:title="@string/cerrar_sesion"
             android:icon="@drawable/ic_baseline_logout_24"/>
 
     </group>
