--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -72,6 +72,11 @@
                 app:layout_constraintTop_toBottomOf="@+id/imageButtonLugares"
                 android:layout_marginBottom="10dp"/>
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/blank"/>
+
         </LinearLayout>
 
     </ScrollView>
