--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="?attr/colorPrimary"
+                android:background="@color/darker_blue"
                 app:popupTheme="@style/Theme.TurIt.PopupOverlay">
 
                 <LinearLayout
@@ -44,12 +44,12 @@
 
                     <ImageView
                         android:contentDescription="@string/description_header"
-                        android:id="@+id/logo"
+                        android:id="@+id/logo2"
                         android:layout_width="0dp"
                         android:layout_height="50dp"
                         android:layout_gravity="start"
                         android:layout_weight="0.5"
-                        android:src="@drawable/logo" />
+                        android:src="@drawable/logo2" />
 
                     <TextView
                         android:layout_width="0dp"
