Se arregló problema con Home.

--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     app:cnb_unselectedColor="@color/white"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
+
     <item
         android:id="@+id/home"
         android:icon="@drawable/ic_home"
         android:title="Home"
-        app:cnb_backgroundColor="@color/dark_golden"
         app:cnb_iconColor="#fff"
-        app:cnb_textColor="#fff" />
+        app:cnb_textColor="#fff"/>
 
     <item
         android:id="@+id/ticket"
-        android:title="Ticket"
         android:icon="@drawable/ic_qr_code_scanner"
-        app:cnb_backgroundColor="@color/dark_golden"
+        android:title="Ticket"
         app:cnb_iconColor="#fff"
         app:cnb_textColor="#fff"/>
 
@@ -22,7 +22,6 @@
         android:id="@+id/agregar"
         android:title="Agregar"
         android:icon="@drawable/ic_add"
-        app:cnb_backgroundColor="@color/dark_golden"
         app:cnb_iconColor="#fff"
         app:cnb_textColor="#fff"/>
 
@@ -30,7 +29,6 @@
         android:id="@+id/lugares"
         android:title="Lugares"
         android:icon="@drawable/ic_map"
-        app:cnb_backgroundColor="@color/dark_golden"
         app:cnb_iconColor="#fff"
         app:cnb_textColor="#fff"/>
 
@@ -38,7 +36,6 @@
         android:id="@+id/tiendas"
         android:title="Tiendas"
         android:icon="@drawable/ic_store"
-        app:cnb_backgroundColor="@color/dark_golden"
         app:cnb_iconColor="#fff"
         app:cnb_textColor="#fff"/>
 
