--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,95 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:fitsSystemWindows="true">
-    <!--tools:openDrawer="start">-->
+    android:background="@color/white"
+    tools:context=".MainActivity">
 
-    <com.google.android.material.navigation.NavigationView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@+id/nav_view"
-        app:headerLayout="@layout/header"
-        app:menu="@menu/menu_main"
-        android:layout_gravity="start"/>
-
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <androidx.drawerlayout.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:context=".MainActivity">
+        android:layout_height="match_parent"
+        tools:context=".MainActivity"
+        android:fitsSystemWindows="true">
+        <!--tools:openDrawer="start">-->
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/appBarLayout1"
+        <com.google.android.material.navigation.NavigationView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/nav_view"
+            app:headerLayout="@layout/header"
+            app:menu="@menu/menu_main"
+            android:layout_gravity="start"/>
+
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/Theme.TurIt.AppBarOverlay">
+            tools:context=".MainActivity">
 
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
+            <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/appBarLayout1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/darker_blue"
-                app:popupTheme="@style/Theme.TurIt.PopupOverlay">
+                android:theme="@style/Theme.TurIt.AppBarOverlay">
 
-                <LinearLayout
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:background="@color/darker_blue"
+                    app:popupTheme="@style/Theme.TurIt.AppBarOverlay">
 
-                    <ImageView
-                        android:contentDescription="@string/description_header"
-                        android:id="@+id/logo2"
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_gravity="start"
-                        android:layout_weight="0.5"
-                        android:src="@drawable/logo2" />
-
-                    <TextView
-                        android:layout_width="0dp"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="@string/puntos"
-                        android:textColor="@color/white" />
+                        android:orientation="horizontal">
 
-                </LinearLayout>
+                        <ImageView
+                            android:contentDescription="@string/description_header"
+                            android:id="@+id/logo2"
+                            android:layout_width="0dp"
+                            android:layout_height="50dp"
+                            android:layout_gravity="start"
+                            android:layout_weight="0.5"
+                            android:src="@drawable/logo2" />
 
-            </androidx.appcompat.widget.Toolbar>
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:text="@string/puntos"
+                            android:textColor="@color/white" />
 
-        </com.google.android.material.appbar.AppBarLayout>
+                    </LinearLayout>
 
-        <include layout="@layout/content_main" />
+                </androidx.appcompat.widget.Toolbar>
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+            </com.google.android.material.appbar.AppBarLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+            <include layout="@layout/content_main" />
 
-        <FrameLayout
-            android:id="@+id/fragment_container"
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="wrap_content">
 
-        <com.ismaeldivita.chipnavigation.ChipNavigationBar
-            android:id="@+id/bottom_nav"
-            android:layout_width="match_parent"
-            android:layout_height="72dp"
-            android:layout_alignParentBottom="true"
-            android:background="@drawable/rounded"
-            android:elevation="16dp"
-            android:padding="8dp"
-            app:cnb_menuResource="@menu/menu_bottom">
+            <FrameLayout
+                android:id="@+id/fragment_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
-        </com.ismaeldivita.chipnavigation.ChipNavigationBar>
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottom_NavigationView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:elevation="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:menu="@menu/menu_bottom"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentRight="true"
+                app:labelVisibilityMode="selected"
+                style="@style/AppTheme"
+                android:background="@color/darker_blue"/>
 
-    </RelativeLayout>
+        </RelativeLayout>
 
-</androidx.drawerlayout.widget.DrawerLayout>
+    </androidx.drawerlayout.widget.DrawerLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
