--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,9 +5,11 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="black">#000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="dark_blue">#20233B</color>
     <color name="darker_blue">#1B1E32</color>
     <color name="dark_golden">#B79F61</color>
+    <color name="orange">#AC2F08</color>
+    <color name="grey">#AAA29F</color>
 </resources>
