--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,6 @@
     tools:context=".MainActivity">
 
     <androidx.drawerlayout.widget.DrawerLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -40,31 +37,51 @@
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:background="@color/darker_blue"
                     app:popupTheme="@style/Theme.TurIt.AppBarOverlay">
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
+                        android:layout_height="match_parent">
 
                         <ImageView
-                            android:contentDescription="@string/description_header"
-                            android:id="@+id/logo2"
+                            android:id="@+id/logo"
                             android:layout_width="0dp"
                             android:layout_height="50dp"
                             android:layout_gravity="start"
                             android:layout_weight="0.5"
-                            android:src="@drawable/logo2" />
+                            android:src="@drawable/logosolotexto"
+                            android:contentDescription="@string/description_logo" />
 
-                        <TextView
+                        <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:gravity="center"
-                            android:text="@string/puntos"
-                            android:textColor="@color/white" />
+                            android:layout_weight="1">
+
+                            <TextView
+                                android:id="@+id/counterTV"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:text="0"
+                                android:textColor="@color/white"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintBottom_toTopOf="@+id/puntosTV" />
+
+                            <TextView
+                                android:id="@+id/puntosTV"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:text="@string/puntos"
+                                android:textColor="@color/white"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/counterTV" />
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
 
                     </LinearLayout>
 
@@ -78,12 +95,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <FrameLayout
-                android:id="@+id/fragment_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+            android:layout_height="match_parent">
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottom_NavigationView"
@@ -97,11 +109,9 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:menu="@menu/menu_bottom"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentRight="true"
                 app:labelVisibilityMode="selected"
                 style="@style/AppTheme"
-                android:background="@color/darker_blue"/>
+                app:itemBackground="@color/light_blue"/>
 
         </RelativeLayout>
 
