--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.TurIt" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/white</item> <!--este cambia color a iconos y toolbar en otras activities que no sean home-->
+        <item name="colorPrimary">@color/white
+        </item> <!--este cambia color a iconos y toolbar en otras activities que no sean home-->
         <item name="colorPrimaryVariant">@color/darker_blue</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
